scripts/deployment/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: buzybox
  labels:
    name: buzybox
spec:
  restartPolicy: Always
  containers:
  - name: buzybox
    image: busybox
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    command:
      - sleep
      - "3600"
