scripts/deployment/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartapi
  template:
    metadata:
      labels:
        app: cartapi
    spec:
      containers:
      - name: cartapi
        image: modoranuc/cartapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: cartsservice
spec:
  selector:
    app: cartapi
  ports:
  - port: 8080
    targetPort: 80
