scripts/deployment/customers-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customersapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customersapi
  template:
    metadata:
      labels:
        app: customersapi
    spec:
      containers:
      - name: customersapi
        image: modoranuc/customersapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: customersservice
spec:
  selector:
    app: customersapi
  ports:
  - port: 8080
    targetPort: 80
