scripts/deployment/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderapi
  template:
    metadata:
      labels:
        app: orderapi
    spec:
      containers:
      - name: orderapi
        image: modoranuc/orderapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: ordersservice
spec:
  selector:
    app: orderapi
  ports:
  - port: 8080
    targetPort: 80
