scripts/deployment/ordersignalr-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersignalr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordersignalr
  template:
    metadata:
      labels:
        app: ordersignalr
    spec:
      containers:
      - name: ordersignalr
        image: modoranuc/ordersignalrapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: ordersignalrservice
spec:
  selector:
    app: ordersignalr
  ports:
  - port: 8080
    targetPort: 80
