scripts/deployment/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentsapi
  template:
    metadata:
      labels:
        app: paymentsapi
    spec:
      containers:
      - name: paymentsapi
        image: modoranuc/paymentsapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "1300Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: paymentsservice
spec:
  selector:
    app: paymentsapi
  ports:
  - port: 8080
    targetPort: 80
