scripts/deployment/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsapi
spec:
  replicas: 5
  selector:
    matchLabels:
      app: productsapi
  template:
    metadata:
      labels:
        app: productsapi
    spec:
      containers:
      - name: productsapi
        image: modoranuc/productsapi
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: productsservice
spec:
  selector:
    app: productsapi
  ports:
  - port: 8080
    targetPort: 80
