scripts/deployment/watchdog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstatus
  template:
    metadata:
      labels:
        app: webstatus
    spec:
      containers:
      - name: webstatus
        image: modoranuc/webstatusapi
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: webstatusservice
spec:
  selector:
    app: webstatus
  ports:
  - port: 8080
    targetPort: 80
